--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1169,10 +1169,7 @@ hr{margin:0;}
 .decorator-wrap .d-gallery {
   flex-direction: row;
   align-items: start;
-
-  .info {
-    margin-right:1rem;
-  }
+  max-width: 100vw;
 }
 
 .d-gallery img {
@@ -1180,7 +1177,43 @@ hr{margin:0;}
   max-height:200px;
   height:auto;
   align-self: flex-start;
+  cursor: pointer;
+  padding: 0.1em;
+
+  &:hover {
+    opacity: 0.9;
+    padding: 0;
+    border: 0.1em solid white;
+
+    &:after {
+      content: "Show full map";
+    }
+  }
 }
+
+.d-gallery .info {
+  padding: 1em;
+  max-width: 35em;
+}
+
+@media screen and (max-width: 1268px) {
+  .decorator-wrap .d-gallery {
+    flex-direction: column;
+  }
+
+  .d-gallery .map.open {
+    overflow: scroll;
+    width: 100vw;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .decorator-wrap .d-gallery {
+    overflow: scroll;
+    max-width: 10000vw;
+  }
+}
+
 .d-gallery h3{line-height:1.3em;margin-top:1rem;}
 .decorator-wrap>.d-department>.departmentContent{margin-left:0;padding-left:0;width:100%;align-self: flex-start;}
 .decorator-wrap>.d-department>.departmentContent p{padding-left:0;}
@@ -1304,6 +1337,10 @@ button  {
   }
   .decorator-wrap>.decorator{margin-bottom:1em;}
   .decorator-wrap>.decorator:last-child{margin-bottom:0;}
+
+  .d-gallery h1 {
+    margin-top: 0.5em;
+  }
 }
 @media screen and (max-width: 1050px) and (min-width: 768px)
 {
