hide overflow on Peeks
the invalid image text can get out of hand, cut it short

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1038,6 +1038,7 @@ hr{margin:0;}
 .peek {
   margin-right: 3px;
   cursor: pointer;
+  overflow: hidden;
 }
 .peek.startedOpen, .startedOpen .peek {
   margin-right: 0;
