adjusted font size on adopt a painting

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -859,6 +859,13 @@ h5.details-title {
   bottom:10px;
   left: 10px;
 }
+.explore .adopt-ptg {
+  margin-top: 10px;
+}
+.explore .adopt-ptg h3 {
+  font-size:1.1em;
+  font-family: $MiaGroteskBold, sans-serif;
+}
 .explore .adopt-ptg a {
   font-size:.9em;
   color: $primary;
