highlight matches in search results

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -53,7 +53,7 @@ h1,h2,h3,h4,h5,h6 {
     font-family: $MiaGroteskBold;
 }
 
-.highlight em, h1 em, h2 em {
+.objects-focus em, .artwork-result em {
   background-color: yellow;
 }
 
