show all highlighted details on preview

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -809,6 +809,9 @@ a.departmentLink h2{
     font-size:smaller;
     line-height:1.3em;
 }
+.artwork-detail p {
+    width: 100% !important;
+}
 .detail-row{
     display:table-row;
 }
