separated exhibitions from explore content

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -978,7 +978,21 @@ button.material-icons {
   padding: 0px;
   font-weight: bold;
 }
-
+.exhibition p {
+  padding: 0 0 10px 0;
+}
+.exhibition p > span.exh_title{
+  font-family: $MiaGroteskBold;
+  line-height: 1.1em;
+}
+.exhibition h4 {
+  color: #999999;
+  text-transform: uppercase;
+  line-height: 1em;
+  padding: 10px 0 0 0;
+  margin: 0;
+  font-family: $MiaGroteskLight;
+}
 /* ===== page.js STYLES ===== */
 
 .page{}
