decorator for rights types:
explain 'Public Domain, Copyright Protected, …'

TODO: revisit decorator design, when more than one is active at the same
time they stack somewhat oddly

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1150,8 +1150,8 @@ hr{margin:0;}
 
     display: -webkit-flex;
     display:flex;
-    -webkit-flex-direction: row;
-    flex-direction: row;
+    -webkit-flex-direction: column;
+    flex-direction: column;
     -webkit-align-items: center;
     align-items: center;
     -webkit-justify-content: center;
