--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1041,7 +1041,7 @@ button.material-icons {
 
 /* ===== info links homepage STYLES ===== */
 
-ul.info {
+.landingPageBody ul.info {
   width:100%;
   max-width: 100vw;
   margin-bottom:2em;
@@ -1051,13 +1051,13 @@ ul.info {
   }
 }
 
-.info li{
+.landingPageBody .info li{
   @media screen and (min-width: 480px) {
     width: calc(33% - 16px);
   }
 }
 
-.info li a{
+.landingPageBody .info li a{
     padding:7px 0;
     width:100%;
     display:block;
@@ -1071,12 +1071,12 @@ ul.info {
     -o-transition: all 150ms linear;
     transition: all 150ms linear;
 }
-.info li a:hover, .departmentLink:hover h2{
+.landingPageBody .info li a:hover, .departmentLink:hover h2{
     background-color:$primary;
     color:white;
     padding-left:10px;
 }
-.info li:last-child a{padding-right:0;}
+.landingPageBody .info li:last-child a{padding-right:0;}
 
 @media screen and (max-width: 768px) {
   .objects-focus div > p, .objects-focus .tombstone {
