--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,7 +15,6 @@ $MiaGroteskRegular: 'MiaGrotesk-Regular', sans-serif;
 $MiaGroteskBlack: 'MiaGrotesk-Black', sans-serif;
 $MiaGroteskRlackItalic: 'MiaGrotesk-BlackItalic', sans-serif;
 
-
 .clearfix:after {
     content: ".";
     display: block;
@@ -1529,4 +1528,27 @@ img.loaded {
 
     .line { stroke: black; stroke-width: 2px; }
   }
+}
+
+#more p {
+  margin-bottom: 1em;
+}
+
+@media (min-width: 840px) {
+  #more p img {
+    position: absolute;
+    top: 100px;
+    left: 75%;
+  }
+}
+@media (max-width: 839px) {
+  #more p img {
+    display: block;
+    margin: 0 auto;
+  }
+}
+
+#more h2 {
+  padding-left: 0px;
+  font-size: 1.25em;
 }
