--- a/sass/main.scss
+++ b/sass/main.scss
@@ -993,14 +993,14 @@ button.material-icons {
   padding: 0px;
   font-weight: bold;
 }
-.exhibition p {
+.exhibitions p {
   padding: 0 0 10px 0;
 }
-.exhibition p > span.exh_title{
+.exhibitions p > span.exh_title{
   font-family: $MiaGroteskBold;
   line-height: 1.1em;
 }
-.exhibition h4 {
+.exhibitions h4 {
   color: #999999;
   text-transform: uppercase;
   line-height: 1em;
