refactor artwork details table -
add object name and see also
keys when building the details should use snake case (`_`)
stretch the 'curator approved' message to full width

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -839,6 +839,16 @@ a.departmentLink h2{
   min-height: 10vh;
   max-width: 31em;
 }
+.detail-row.curator_approved {
+  dt {
+    display: none;
+  }
+
+  .detail-content {
+    width: 100%;
+    padding: 1em 0 0 0;
+  }
+}
 h5.details-title {
     border-top:3px solid $primary;
     margin-top:1em;
