link accession highlight image and text

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -563,6 +563,9 @@ header{
   margin: .5%;
   vertical-align: top;
 }
+.single_highlight a {
+  color: #232323 !important;
+}
 .highlight_image{
 	position: relative;
 	width: 100%;		/* desired width */
