--- a/sass/main.scss
+++ b/sass/main.scss
@@ -929,11 +929,20 @@ h5.details-title {
   height: 100%;
   background: rgba(35,35,35,.7);
 }
-.new_mia_header {
-  height: 200px;
+.new-to-mia {
   display: inline-block;
   width: 100%;
   background: $primary;
+  padding-top: 3em;
+  color: white; // $support;
+  min-height: 100vh;
+
+  .explore-section {
+    padding: 0 1em;
+    background: #232323;
+    position: relative;
+    z-index: 4;
+  }
 }
 .explore-header {
   height: 200px;
