--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1621,3 +1621,11 @@ img.error, img.loaded.error {
 .sticky .closePreview {
   right: 5em !important;
 }
+
+.sketchfab-embed-wrapper, .sketchfab-embed-wrapper iframe {
+  width: 100%;
+  height: 100%;
+  z-index: 100000000;
+  background-color: rgb(35, 35, 35);
+  position: relative;
+}
