work around node+ssl incompatibility on /curators

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -880,7 +880,7 @@ h5.details-title {
   height: 200px;
   display: inline-block;
   width: 100%;
-  background: url('http://api.artsmia.org/images/8747/1200/large.jpg') no-repeat center center;
+  background: url('https://api.artsmia.org/images/8747/1200/large.jpg') no-repeat center center;
   background-size: cover;
 }
 .curator-header {
