homepage improvements when JS disabled:
make the quilt a bit less ragged by centering all images inside their patch boundaries
  hovering an image expands it above all others
don't lazy load department images - without JS they weren't loading at all

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -77,6 +77,15 @@ header{
     background: #222;
 }
 
+.quilt-wrap a:hover {
+  overflow: visible !important;
+  z-index: 100;
+  
+  img {
+    overflow: visible !important;
+  }
+}
+
 .logo-container{
     background-image: url("../images/MIA_LOGO_MARK.svg");
     background-repeat: no-repeat;
