disable jumping quilt images from behind search
![image](https://cloud.githubusercontent.com/assets/1378/24374195/94efdbf0-12f9-11e7-9407-92c7d14e63d2.png)

it's only baffled people so far, needs more testing

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -79,7 +79,7 @@ header{
 
 .quilt-wrap a:hover {
   overflow: visible !important;
-  z-index: 100;
+  // z-index: 100;
   
   img {
     overflow: visible !important;
