--- a/sass/main.scss
+++ b/sass/main.scss
@@ -953,7 +953,7 @@ h5.details-title {
   height: 200px;
   display: inline-block;
   width: 100%;
-  background: url('https://api.artsmia.org/images/8747/1200/large.jpg') no-repeat center center;
+  background: url('https://4.api.artsmia.org/800/8747.jpg') no-repeat center center;
   background-size: cover;
 }
 .curator-header {
