--- a/sass/main.scss
+++ b/sass/main.scss
@@ -523,7 +523,7 @@ header{
   margin-right: 0.5em;
 }
 .social {
-  background-color: $primary;
+  background-color: white;
   display: inline-block;
   padding: 10px 2px 5px 10px;
   margin-right: 2px;
