--- a/sass/main.scss
+++ b/sass/main.scss
@@ -977,17 +977,29 @@ h5.details-title {
   position: fixed
 }
 .explore{
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
 }
 .explore {
   .newsflash, .artstory, .explore-content {
     a {
+      flex: 1;
+      display:flex;
+      max-width: 100%;
+
       font-size:1.1em;
-      color: #ffffff;
+      color: #232323;
       font-family: $MiaGroteskBold, sans-serif;
-      position: absolute;
-      bottom:10px;
-      left: 10px;
+    }
+
+    img {
+      align-self: start;
+      order: -1;
+      flex: 1;
+      flex-grow:0;
+      flex-shrink:0;
+      width: 30%;
+      margin-right: 0.5em
     }
   }
 }
@@ -1033,7 +1045,6 @@ h5.details-title {
 }
 .explore a sub{
   font-size:1.1em;
-  color: #ffffff;
   font-family: $MiaGroteskLight, sans-serif;
 }
 .audioClip a, .audioClip a sub {
@@ -1047,13 +1058,7 @@ h5.details-title {
 }
 .newsflash, .artstory, .explore-content {
   display: inline-block;
-  width: 175px;
-  height: 175px;
-  float: left;
   margin:20px 10px 0 0;
-  background-size: cover;
-  position: relative;
-  background-color: rgb(35,35,35);
 }
 .audioClip{
   display: inline-block;
