group typed content with an optional header
To me the headers don't make sense for audio/video/artstory/3d, as those
don't have specific text that accompanies each related item. Show 'type'
headers for other related contents

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -976,9 +976,7 @@ h5.details-title {
   background: $primary;
   position: fixed
 }
-.explore{
-  display: flex;
-  flex-direction: column;
+.explore {
 }
 .explore {
   .newsflash, .artstory, .explore-content {
@@ -987,9 +985,8 @@ h5.details-title {
       display:flex;
       max-width: 100%;
 
-      font-size:1.1em;
       color: #232323;
-      font-family: $MiaGroteskBold, sans-serif;
+      font-family: $MiaGroteskRegular, sans-serif;
     }
 
     img {
