--- a/sass/main.scss
+++ b/sass/main.scss
@@ -309,14 +309,17 @@ header{
     transform: translate3d(0px,0px,0px);
 }
 
-    .objects-focus h1{
+    .objects-focus, .artwork-result {
+      h1 {
+          font-family: $MiaGroteskLight;
+          font-size:1.357em;
+          color: $primary;
+      }
+      h1 strong {
         font-family: $MiaGroteskBold;
-        font-size:1.357em;
-        color: $primary;
+      }
     }
-    span.dated{
-      font-family: $MiaGroteskRegular;
-    }
+
     .info .objects-focus h1 {
       border-top: none;
       padding-top: 0;
@@ -821,6 +824,86 @@ a.departmentLink h2{
   height: calc(100vh - 4em);
   background-color: #ddd;
 }
+
+// BETA! WIP! white background for the image zoomer
+// with a subtle gradient to let the logo and topright nav show through
+.isDev {
+  %shadowBurstTopLeft {
+    background-color: inherit !important;
+    background-image: radial-gradient(circle at top left, #aaa, #ccc 3%, #eee 11%, #fff 15%);
+    // I can't get the radial gradient going in the right direction? So use linear with rotation for now
+    // % might not be the right unit here because .quilt-search-wrap is 100vw and #map is only ~70, so they
+    // don't span the same distance when set out as pct
+    background-image: linear-gradient(-211deg, #aaa, #ccc 3%, #eee 15%, #fff 19%);
+  }
+  .artwork #map {
+    @extend %shadowBurstTopLeft;
+
+    &.leaflet-container {
+      background-color: inherit !important;
+    }
+  }
+  .quilt-search-wrap {
+    @extend %shadowBurstTopLeft;
+  }
+
+  .global_buttons {
+    // IDEA radial gradient behind the white buttons to show them against the white background
+    //
+    // background: radial-gradient(circle at top right, #aaa, #ccc 21%, #eee 31%, #fff);
+    // background-image: linear-gradient(
+    //   -135deg,
+    //   rgba(199,199,199,0.3),
+    //   rgba(220, 220, 220, 0.3) 21%,
+    //   rgba(240, 240, 240, 0.3) 31%,
+    //   rgba(255, 255, 255, 0.3) 77%
+    // ); // TODO - see through linear gradient?
+    // background-image: linear-gradient(-135deg, #aaa, #ccc 21%, #eee 31%, #fff 77%);
+    // 
+    // &:hover {
+    //   background: #232323;
+    // }
+    //
+    // …NOPE
+    //
+    // Instead, make the buttons dark, and let the background use a blur backdrop?
+    // Downside: No FF suport
+    // Maybe add javascript to this so when the page is 'docked' at the top, the button is opaque
+    // but once scrolling and interaction happens it fades into the background?
+    background: inherit;
+    backdrop-filter: blur(3px);
+    border-radius: 1em;
+    button {
+      color: rgba(35, 35, 35, 0.7);
+    }
+    // 
+    // My other idea is to hide them behind the top of the page by 'scrolling the page up'
+    // with JS onload, so they're behind the part of the page visible at load and an up scroll
+    // reveals the top nav? Maybe the logo would be z-indexed to show, while the rest of the nav
+    // bar is hidden?
+  }
+
+  header.open .global_buttons {
+    background: white;
+    border-radius: 0;
+
+    button {
+      color: #232323;
+    }
+  }
+
+  .artwork.smallviewport::before {
+    #map {
+      background-image: none;
+    }
+  }
+
+  &.smallviewport .global_buttons {
+    background: #232323;
+  }
+}
+// END WIPBETA
+
 .artwork #map.leaflet-pseudo-fullscreen {
   width: 100vw !important;
   height: 100vh !important;
