test out MiaTombstone font
This one has newer characters, that are important but I don't want to switch everything over until doing better testing

'hózhǫ́', 'Lakȟóta'

--- a/sass/mia-font.scss
+++ b/sass/mia-font.scss
@@ -23,8 +23,8 @@
 }
 @font-face {
   font-family: 'MiaGrotesk-Light';
-  src: url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-Light.eot'); /* IE9 Compat Modes */
-  src: url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-Light.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  src: url('https://mia-grotesk.s3.amazonaws.com/mia-tombstone/MiaTombstone-Light.eot'); /* IE9 Compat Modes */
+  src: url('https://mia-grotesk.s3.amazonaws.com/mia-tombstone/MiaTombstone-Light.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
        url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-Light.woff') format('woff'), /* Pretty Modern Browsers */
        url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-Light.svg#svgMiaGrotesk-Light') format('svg'); /* Legacy iOS */
 }
