consistent spacing between images in grid
before there was a narrow horizontal gutter and a bigger one vertically.

--- a/foot-in-the-door/components/ImageCarousel.module.css
+++ b/foot-in-the-door/components/ImageCarousel.module.css
@@ -2,8 +2,8 @@
   @apply flex overflow-x-scroll w-full p-4 m-4;
 
   @screen md {
-    width: calc(50% + 4rem);
-    margin-right: -4rem;
+    width: calc(50% + theme('spacing.4'));
+    @apply -mr-4;
   }
 }
 
