--- a/foot-in-the-door/styles/index.css
+++ b/foot-in-the-door/styles/index.css
@@ -12,4 +12,8 @@
       @apply no-underline;
     }
   }
+
+  input::placeholder, textarea::placeholder {
+    @apply text-gray-400 font-light;
+  }
 }
