Carousel synthetic horizontal scroll control
80% baked. It works pretty well, but geez using a native
scroll bar would've been easier. But they don't look great,
and don't really help mouse/keyboard users?

--- a/foot-in-the-door/components/ImageCarousel.module.css
+++ b/foot-in-the-door/components/ImageCarousel.module.css
@@ -1,7 +1,9 @@
 /** @format */
 
 .imageCarousel {
-  @apply flex overflow-x-scroll my-4;
+  & ul {
+    @apply flex overflow-x-scroll my-4;
+  }
 
   @screen md {
     width: calc(50% + theme('spacing.16'));
