change survey reject button
nudge left and darken text

--- a/foot-in-the-door/components/Survey.module.css
+++ b/foot-in-the-door/components/Survey.module.css
@@ -18,7 +18,7 @@
   }
   & button + button,
   & button + a {
-    @apply border-0 bg-white text-gray-300 mt-2 text-sm;
+    @apply border-0 bg-white text-gray-600 mt-2 text-sm px-1;
   }
 
   & button[disabled] {
