--- a/foot-in-the-door/styles/index.css
+++ b/foot-in-the-door/styles/index.css
@@ -6,7 +6,7 @@
 
 @layer base {
   a {
-    @apply underline;
+    /* @apply underline; */
 
     h1, h2, h3, h4, h5, h6 {
       @apply no-underline;
