feat: tweaks and adjustments for AIB21
enable search for AIB using dataPrefix
  (TODO how to search within a Mia-proper exhibition?)
adjust side-by-side comparison layout
integrate `dataPrefix` to fill the 'browse more' grid on the artwork page

'picture in picture' view of the main + auxilary work for narrow screens
  it was hard to get the scroll+sticky idea working on mobile, so flex to
  a smaller image of the main work in the corner (p-i-p style)

--- a/foot-in-the-door/components/ImageWithBackground.module.css
+++ b/foot-in-the-door/components/ImageWithBackground.module.css
@@ -1,7 +1,8 @@
 /** @format */
 
 .imageBlurBackground::after {
-  @apply absolute inset-0 w-full h-full opacity-25;
+  @apply absolute inset-0 w-full h-full;
+  opacity: var(--bg-opacity);
   content: '';
   background-image: var(--bg-image);
   z-index: -1;
